Default preferences saved

--- a/resources/preferences.yaml
+++ b/resources/preferences.yaml
@@ -1,7 +1,5 @@
 nav:
   content:
-    'content::collections':
-      action: '@modify'
-      reorder: true
-      children:
-        'content::collections::pages': '@inherit'
+    reorder: true
+    items:
+      'content::collections::pages': '@move'
