--- a/resources/blueprints/collections/pages/modular.yaml
+++ b/resources/blueprints/collections/pages/modular.yaml
@@ -124,3 +124,21 @@ tabs:
               max_items: 1
               listable: false
               localizable: true
+  seo:
+    display: SEO
+    sections:
+      -
+        display: SEO
+        fields:
+          -
+            handle: meta_title
+            field:
+              input_type: text
+              antlers: false
+              type: text
+              display: 'Meta Title'
+              listable: hidden
+              instructions_position: above
+              visibility: visible
+              replicator_preview: true
+              hide_display: false
