--- a/resources/blueprints/collections/pages/modular.yaml
+++ b/resources/blueprints/collections/pages/modular.yaml
@@ -142,3 +142,14 @@ tabs:
               visibility: visible
               replicator_preview: true
               hide_display: false
+          -
+            handle: meta_description
+            field:
+              antlers: false
+              type: textarea
+              display: 'Meta Description'
+              listable: hidden
+              instructions_position: above
+              visibility: visible
+              replicator_preview: true
+              hide_display: false
