--- a/resources/fieldsets/links.yaml
+++ b/resources/fieldsets/links.yaml
@@ -1,2 +1,24 @@
 title: Links
-fields: {  }
+fields:
+  -
+    handle: label
+    field:
+      input_type: text
+      antlers: false
+      type: text
+      display: Label
+      listable: hidden
+      instructions_position: above
+      visibility: visible
+      replicator_preview: true
+      hide_display: false
+  -
+    handle: url
+    field:
+      type: link
+      display: URL
+      listable: hidden
+      instructions_position: above
+      visibility: visible
+      replicator_preview: true
+      hide_display: false
