--- a/resources/fieldsets/faqs.yaml
+++ b/resources/fieldsets/faqs.yaml
@@ -3,7 +3,7 @@ fields:
   -
     handle: items
     field:
-      mode: typeahead
+      mode: select
       create: true
       collections:
         - faq
