--- a/resources/blueprints/collections/faq/faq.yaml
+++ b/resources/blueprints/collections/faq/faq.yaml
@@ -45,3 +45,4 @@ tabs:
               visibility: visible
               replicator_preview: true
               hide_display: false
+              max_files: 1
