--- a/content/collections/faq.yaml
+++ b/content/collections/faq.yaml
@@ -1,5 +1,16 @@
 title: FAQs
-revisions: false
+template: default
+layout: layout
+revisions: true
+sort_dir: asc
 date_behavior:
   past: public
   future: private
+preview_targets:
+  -
+    label: Entry
+    url: '{permalink}'
+    refresh: true
+structure:
+  root: false
+  max_depth: 1
