--- a/content/collections/articles.yaml
+++ b/content/collections/articles.yaml
@@ -1,7 +1,17 @@
 title: Articles
+template: default
+layout: layout
 taxonomies:
   - categories
-revisions: false
+revisions: true
+route: '/blog/{slug}'
+date: true
+sort_dir: asc
 date_behavior:
   past: public
   future: private
+preview_targets:
+  -
+    label: Entry
+    url: '{permalink}'
+    refresh: true
