--- a/resources/fieldsets/form.yaml
+++ b/resources/fieldsets/form.yaml
@@ -1,2 +1,14 @@
 title: Form
-fields: {  }
+fields:
+  -
+    handle: form_field
+    field:
+      max_items: 1
+      mode: select
+      type: form
+      display: 'Form Field'
+      listable: hidden
+      instructions_position: above
+      visibility: visible
+      replicator_preview: true
+      hide_display: false
