--- a/content/collections/products.yaml
+++ b/content/collections/products.yaml
@@ -1,5 +1,17 @@
 title: Products
-revisions: false
+template: default
+layout: layout
+taxonomies:
+  - types
+revisions: true
+route: '/products/{slug}'
+date: true
+sort_dir: asc
 date_behavior:
   past: public
   future: private
+preview_targets:
+  -
+    label: Entry
+    url: '{permalink}'
+    refresh: true
