--- a/users/justin.m.rhodes@gmail.com.yaml
+++ b/users/justin.m.rhodes@gmail.com.yaml
@@ -7,3 +7,6 @@ preferences:
   collections:
     pages:
       after_save: continue_editing
+  taxonomies:
+    types:
+      after_save: continue_editing
