--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "statamic/cms": "^4.0"
+        "statamic/cms": "^4.0",
+        "visuellverstehen/statamic-classify": "^2.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8.1",
